[package]
name = "revm-delegate"
version = "0.1.0"
edition = "2021"

[dependencies]
delegate-trait.git = "https://github.com/makcandrov/delegate-trait"
revm-delegate-impl.path = "impl"

[build-dependencies]
delegate-trait.git = "https://github.com/makcandrov/delegate-trait"

[dev-dependencies]
revm = "19"
