[package]
name = "revm-delegate-impl"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
delegate-trait.git = "https://github.com/makcandrov/delegate-trait"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[build-dependencies]
delegate-trait.git = "https://github.com/makcandrov/delegate-trait"
